<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        cardCornerRadius="5dp"
        cardElevation="3dp"
        cardPreventCornerOverlap="true"
        cardUseCompatPadding="true"
        android:layout_margin="3dp"
        android:layout_width="match_parent"
        android:layout_height="72dp">

            <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:gravity="center"
                    android:padding="4dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_gravity="center"
                        android:textSize="16sp"
                        android:text="@string/to_card"
                        android:gravity="center"
                        android:layout_width="0dp"
                        android:layout_weight="0.4"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/tv_to_payableCard"
                        android:layout_gravity="center"
                        android:textSize="16sp"
                        android:text="Jubaer"
                        android:gravity="center_vertical"
                        android:paddingLeft="8dp"
                        android:layout_width="0dp"
                        android:layout_weight="1.5"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:layout_gravity="center"
                        android:textSize="16sp"
                        android:text="@string/bank_card"
                        android:gravity="center_vertical"
                        android:paddingLeft="8dp"
                        android:layout_width="0dp"
                        android:layout_weight="0.6"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/tv_bankName_payableCard"
                        android:layout_gravity="center"
                        android:textSize="13sp"
                        android:text="DBBL"
                        android:gravity="center"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:textStyle="bold"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/tv_date_payableCard"
                        android:layout_gravity="center"
                        android:textSize="10sp"
                        android:text="20-10-2018"
                        android:gravity="center"
                        android:paddingLeft="8dp"
                        android:layout_width="0dp"
                        android:layout_weight="0.7"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:padding="4dp"
                    android:layout_height="wrap_content">


                    <TextView
                        android:layout_gravity="center"
                        android:textSize="13sp"
                        android:text="Check No:"
                        android:gravity="center"
                        android:layout_marginRight="8dp"
                        android:layout_width="0dp"
                        android:layout_weight="0.5"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/tv_checkNumber_payableCard"
                        android:layout_gravity="center"
                        android:textSize="13sp"
                        android:text="113322445566"
                        android:paddingLeft="8dp"
                        android:layout_width="0dp"
                        android:layout_weight="1.5"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="0.5"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center"
                        android:text="@string/amount"
                        android:textSize="13sp" />
                    <TextView
                        android:id="@+id/tv_amount_payableCard"
                        android:layout_gravity="center"
                        android:textSize="13sp"
                        android:text="6000000"
                        android:layout_marginLeft="8dp"
                        android:layout_width="0dp"
                        android:layout_weight="0.5"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>